--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@google-cloud/firestore": "^7.11.0",
+    "@grpc/grpc-js": "^1.12.5",
+    "firebase-admin": "^13.0.2",
+    "firebase-functions": "^6.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
