--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
+    "@angular/fire": "^17.1.0",
     "@angular/forms": "^17.3.0",
     "@angular/material": "^17.3.7",
     "@angular/platform-browser": "^17.3.0",
@@ -24,6 +25,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@google-cloud/firestore": "^7.11.0",
     "@grpc/grpc-js": "^1.12.5",
+    "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.2.0",
     "rxjs": "~7.8.0",
