cambios en gitignore

--- a/Frontend/.gitignore
+++ b/Frontend/.gitignore
@@ -45,3 +45,6 @@ Thumbs.db
 
 #Enviroments
 src/enviroments
+
+#firebase
+/.firebase/hosting.ZGlzdFxhdG9tLWNoYWxsZW5nZS1mZS10ZW1wbGF0ZVxicm93c2Vy.cache
